--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "dev": "nodemon index.js"
   },
   "keywords": [
-    "baileysQr", "MdLogin", "TOHID-AI", "whatsapp-bot", "BotWhatsapp", "whatsapp-web", "whatsapp", "session", "pair-code", "express-pairing", "whatsappbot", "express-session", "whatsapp-api", "pairing", "baileys-md", "baileys-bot",
+    "baileysQr", "MdLogin", "MSELA-CHUI-MASTER-BOT", "whatsapp-bot", "BotWhatsapp", "whatsapp-web", "whatsapp", "session", "pair-code", "express-pairing", "whatsappbot", "express-session", "whatsapp-api", "pairing", "baileys-md", "baileys-bot",
     "whatsappLogin", "adiwajshing/baileys", "baileys-md-qr", "multi-device-qr", "whiskey sockets/baileys", "md-pair", "bot-pair", "baileysQrScanner", "botpairing", "WhatsAppPairing", "LinkDevice"
   ],
-  "author": "Tohidkhan6332",
+  "author": "Mselachui03",
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
