--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "node": ">=20.0.0"
   },
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name qasim",
+    "start": "pm2 start index.js --deep-monitoring --attach --name lazack",
     "stop": "pm2 stop tohid",
     "restart": "pm2 restart tohid",
     "dev": "nodemon index.js"
@@ -21,7 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "6.6.0",
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@^8.7.1",
     "awesome-phonenumber": "^2.64.0",
     "fs-extra": "^11.3.0",
     "megajs": "^1.3.3",
